name:                HES
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/npdawson/HES#readme
license:             GPL
license-file:        LICENSE
author:              Nathaniel P. Dawson
maintainer:          nathaniel.dawson@gmail.com
copyright:           Copyright: (c) 2016 Nathaniel P. Dawson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , vector
  default-language:    Haskell2010

executable HES-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HES
  default-language:    Haskell2010

test-suite HES-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HES
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/npdawson/HES
